--- a/style.css
+++ b/style.css
@@ -1,75 +1,69 @@
-body {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: white;
-  flex-direction: column;
-  margin: 0px;
+body{
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background: linear-gradient(to bottom, #1154B8, #D6E4FF);
 }
+/* navbar starts from here */
 .navbar {
   display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  background-color:#2C3E50 ;
-  width: 100%;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  position:static;
+  justify-content: space-between;
+  align-items: center;
+  background-color: black;
 }
-.title{
-   display: flex;
-   font-size: 50px;
-   justify-content: center;
-   align-items: center;
-   color: #fffdfd;
+/* profile tag starts from here */
+.profiletag {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  border: 2px solid ;
+  box-shadow: 5px 5px 10px rgba(255, 255, 255, 0.5);
+  background-color: white;
+  margin: 10px;
 }
-.navelements{
-    display: flex;
-    justify-content: space-around;
-    /* border: 2px solid red; */
+#profileimage{
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
 }
-.navone {
-    display: flex;
-    font-size: 18px;
-    color: #fffdfd;
-    text-decoration: none;
-    padding: 2rem;
-    border-radius: 5px;
-    transition: background-color 0.9s ease;
-}
-
-.navone:hover {
-    background-color: #ddd;
-}
-.navone:active {
-    background-color: #ccc;
-}
-.profile{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-    width: fit-content;
-    height: fit-content;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-#dashboardimg{
-  width: 3rem;
-  height: 3rem;
-}
-.dropdown {
-  position: relative;
-  display: inline-block;
+/* navmenu starts from here */
+/* Dropdown container */
+.dropdown-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
 
+/* Dropdown button */
+.dropdown-button {
+  padding: 10px 20px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+  overflow: hidden;
+  background-color: white;
+  margin: 15px;
+  border-radius: 4px;
+}
+#menuimage{
+  width: 30px;
+  height: 30px;
+}
+
+/* Dropdown content (hidden by default) */
 .dropdown-content {
   display: none;
-  position: absolute;
+  position:fixed;
   background-color: #f9f9f9;
-  min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
 
+/* Links inside the dropdown */
 .dropdown-content a {
   color: black;
   padding: 12px 16px;
@@ -77,19 +71,51 @@ body {
   display: block;
 }
 
+/* Change color of dropdown links on hover */
 .dropdown-content a:hover {
   background-color: #f1f1f1;
 }
 
-.dropdown:hover .dropdown-content {
-  display: block;
+/* Show the dropdown menu */
+.dropdown-container.show .dropdown-content {
+  display: flex;
 }
-/* .blogs{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    border: 2px solid red;
-    width: 100%;
-    height:max-content;
-} */
+
+/* navbar ends here */
+/* board starts from here */
+
+.board{
+  margin: 0px;
+  display: flex;
+  position: sticky;
+  border: 2px solid black;
+  flex-direction: column;
+  width: 40vh;
+  align-items: center;
+  background-color: #003362;
+}
+.title{
+  /* border: 2px solid black; */
+  margin-bottom: 150px;
+}
+#mtitle{
+  font-size: 64px;
+  font-family:Arial, Helvetica, sans-serif;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+.login{
+  display: flex;
+  /* border: 2px solid black; */
+  margin-bottom: 155px;
+  justify-content: space-around;
+  padding: 20px;
+}
+#btn1,#btn2{
+  background-color: black;
+  color: white;
+  padding: 5px;
+  margin: 20px;
+  border-radius: 5px;
+  box-shadow: 5px 5px 10px rgba(28, 27, 27, 0.5);
+  font-size: 20px;
+}
