--- a/home/style.css
+++ b/home/style.css
@@ -1,13 +1,16 @@
+/************************************************************************************/
+/* THIS IS THE CSS FOR MAIN PAGE */
 body{
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
   background: linear-gradient(to bottom, #1154B8, #D6E4FF);
+  overflow-x: hidden; 
 }
 /* navbar starts from here */
 .navbar {
   display: flex;
-  position:static;
+  position:sticky;
   justify-content: space-between;
   align-items: center;
   background-color: black;
@@ -20,7 +23,6 @@ body{
   width: 70px;
   height: 70px;
   border-radius: 50%;
-  border: 2px solid ;
   box-shadow: 5px 5px 10px rgba(255, 255, 255, 0.5);
   background-color: white;
   margin: 10px;
@@ -37,8 +39,13 @@ body{
   flex-direction: column;
   align-items: flex-start;
 }
+ 
 
 /* Dropdown button */
+.dropdown-container {
+  position: relative; /* Adjust positioning */
+}
+
 .dropdown-button {
   padding: 10px 20px;
   font-size: 16px;
@@ -47,38 +54,36 @@ body{
   overflow: hidden;
   background-color: white;
   margin: 15px;
+  margin-right: 80px;
   border-radius: 4px;
 }
-#menuimage{
-  width: 30px;
-  height: 30px;
-}
 
-/* Dropdown content (hidden by default) */
 .dropdown-content {
   display: none;
-  position:fixed;
-  background-color: #f9f9f9;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  position: absolute; /* Adjust positioning */
+  top: 100%; /* Position below the button */
+  left: 0;
+  background-color: rgba(99, 79, 79, 0.499);
+  
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
 }
 
-/* Links inside the dropdown */
 .dropdown-content a {
-  color: black;
+  color: white;
   padding: 12px 16px;
   text-decoration: none;
-  display: block;
-}
-
-/* Change color of dropdown links on hover */
-.dropdown-content a:hover {
-  background-color: #f1f1f1;
-}
-
-/* Show the dropdown menu */
-.dropdown-container.show .dropdown-content {
   display: flex;
+  justify-content: center;
+  padding: 20px;
+}
+
+.dropdown-content a:hover {
+  background-color: #b1a0a097;
+}
+
+.show {
+  display: block;
 }
 
 /* navbar ends here */
@@ -106,7 +111,7 @@ body{
 .login{
   display: flex;
   /* border: 2px solid black; */
-  margin-bottom: 155px;
+  margin-bottom: 159px;
   justify-content: space-around;
   padding: 20px;
 }
@@ -119,3 +124,8 @@ body{
   box-shadow: 5px 5px 10px rgba(28, 27, 27, 0.5);
   font-size: 20px;
 }
+/* ************************************************************************************************ */
+/* ************************************************************************************************ */
+/* ************************************************************************************************ */
+
+
