--- a/home/style.css
+++ b/home/style.css
@@ -32,6 +32,13 @@ body{
   height: 80px;
   border-radius: 50%;
 }
+.joint{
+  display: flex;
+  flex-direction: row;
+  padding: 10px;
+  align-items: baseline;
+  justify-content: baseline;
+}
 /* navmenu starts from here */
 /* Dropdown container */
 .dropdown-container {
@@ -47,7 +54,7 @@ body{
 }
 
 .dropdown-button {
-  padding: 10px 20px;
+  /* padding: 10px 20px; */
   font-size: 16px;
   border: none;
   cursor: pointer;
@@ -64,7 +71,6 @@ body{
   top: 100%; /* Position below the button */
   left: 0;
   background-color: rgba(99, 79, 79, 0.499);
-  
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
 }
