--- a/tech/techstyle.css
+++ b/tech/techstyle.css
@@ -1,7 +1,10 @@
-body{
-    margin: 0px;
-    background: linear-gradient(to bottom, #003362, #D6E4FF, #000000);
+body {
+  margin: 0px;
+  /* background-color: #003362; Fallback color */
+  background-color: #718dc4;
+  /* Use linear gradient as background */
 }
+
 #title{
     font-size: 40px;
     color: black;
@@ -22,13 +25,6 @@ body{
     margin: 0px;
   }
 /* profile tag starts from here */
-.profiletag {
-    display: flex;
-    width: 70px;
-    height: 70px;
-    border-radius: 50%;
-    box-shadow: 5px 5px 10px rgba(255, 255, 255, 0.5);
-  }
 #profileimage{
     width: 80px;
     height: 80px;
@@ -53,7 +49,7 @@ body{
     border: none;
     cursor: pointer;
     overflow: hidden;
-    /* background-color: white; */
+    background-color: white;
     margin: 15px;
     margin-right: 80px;
     border-radius: 4px;
@@ -64,7 +60,7 @@ body{
     position: absolute; /* Adjust positioning */
     top: 100%; /* Position below the button */
     left: 0;
-    background-color: rgba(99, 79, 79, 0.499);
+    background-color: rgba(35, 27, 27, 0.499);
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
   }
