--- a/home/style.css
+++ b/home/style.css
@@ -4,8 +4,9 @@ body{
   padding: 0px;
   flex-direction: column;
   font-family: Arial, sans-serif;
-  background: linear-gradient(rgba(255, 255, 255, 0.179), rgba(255, 255, 255, 0)), url('https://source.unsplash.com/1920x1080/?technology') no-repeat center center fixed;
+  background: linear-gradient(rgba(255, 255, 255, 0.103), rgba(255, 255, 255, 0.388)), url('https://source.unsplash.com/1920x1080/?technology') no-repeat center center fixed;
   background-size: cover;
+  overflow-x: hidden;
 }
 .overlay {
   position: fixed;
@@ -80,56 +81,68 @@ body{
     mix-blend-mode: difference; 
 }
 /* external css */
-#nav-bar
+/*#nav-bar
 {
 	position: sticky;
 	top: 0;
 	z-index: 10;
 
-}
-.navbar
+}*/
+.nav-bar
 {
-	background-image: linear-gradient(to right, #007AC0, #007AC0)
-	
-
+	/*background-image: linear-gradient(to right, rgba(128, 128, 128, 0.388), rgba(128, 128, 128, 0.388)) ;*/
+	background-color:  rgba(128, 128, 128, 0.659);
 }
 #Who
 {
 	padding-top: 100px;
-	background-color:  #007AC0;
+	background-color:  transparent;
 	padding-bottom: 40px;
+  box-shadow: 0 0 10px rgb(99, 90, 90);
+}
+
+button.btn{
+  background-color: rgba(128, 128, 128, 0.515);
+  margin-left: 300px;
+  color: black;
 }
 #search
 {
-	background-color:  #007AC0;
+	background-color: black ;
 	padding-left: 250px;
 	padding-bottom: 40px;
 }
 #addi
 {
+  box-shadow: 0 0 10px rgb(99, 90, 90);
 	padding-top: 5%;
 	padding-left: 5%;
 	padding-right:5%;
 	padding-bottom: 5%;
+  
 }
 .abcd
 {
-	
+  color: white;
+  mix-blend-mode: difference; 
 	padding-top: 130px;
 	padding-left: 20px;
 
 }
 #addi2
-{
+{ 
+  box-shadow: 0 0 10px rgb(99, 90, 90);
 	padding-bottom: 50px;
   margin-left:10px;
+  
 	
 
 }
 .abcd2
 {
 	padding-top: 140px;
-
+  color: white;
+  mix-blend-mode: difference; 
 	
 }
 
@@ -137,11 +150,13 @@ body{
 {
 	padding-top: 30px;
 	padding-left: 30px;
-	
+	box-shadow: 0 0 10px rgb(99, 90, 90);
 	padding-bottom: 30px;
 }
 .abcd3
 {
+  color: white;
+  mix-blend-mode: difference; 
 	padding-top: 80px;
 	padding-left: 40px;
 }
@@ -155,6 +170,8 @@ body{
 }
 .abcd4
 {
+  color: white;
+  mix-blend-mode: difference; 
 	margin:center;
 }
 #carouselExampleControls
@@ -172,8 +189,19 @@ body{
 }
 .abcd5
 {
+  color: white;
+  mix-blend-mode: difference; 
 	margin:center;
 }
+.text-center{
+  color: white;
+  mix-blend-mode: difference; 
+  text-decoration: underline;
+}
+.special-image{
+  margin-left: 115px;
+}
+
  
 #fotter{background-color: rgb(240, 240, 240);
 	 background-size: cover;
@@ -243,9 +271,8 @@ body{
   /* box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2); */
   display: flex;
   flex-direction: column;
-  color: white;
-  mix-blend-mode: difference; 
-  background-color: rgba(255, 255, 255, 0.8); /* Semi-transparent white background */
+  color: black;
+  background-color: rgba(98, 85, 85, 0.459); /* Semi-transparent white background */
   backdrop-filter: blur(10px);
   margin-bottom: 40px;
 }
