--- a/home/style.css
+++ b/home/style.css
@@ -4,7 +4,7 @@ body{
   padding: 0px;
   flex-direction: column;
   font-family: Arial, sans-serif;
-  background: linear-gradient(rgba(255, 255, 255, 0.103), rgba(255, 255, 255, 0.388)), url('https://source.unsplash.com/1920x1080/?technology') no-repeat center center fixed;
+  /* background: linear-gradient(rgba(255, 255, 255, 0.103), rgba(255, 255, 255, 0.388)), url('https://source.unsplash.com/1920x1080/?technology') no-repeat center center fixed; */
   background-size: cover;
   overflow-x: hidden;
 }
@@ -24,23 +24,24 @@ body{
   justify-content: space-between;
   align-items: center;
   /* border: 2px solid black; */
-  background-color: rgba(255, 255, 255, 0.8); /* Semi-transparent white background */
+  background-color: #283766; /* Semi-transparent white background */
   backdrop-filter: blur(10px);
   flex-wrap: wrap;
-  margin-bottom: 20px;
+  color: white;
+  /* margin-bottom: 20px; */
 }
 .title{
   font-size: 30px;
   font-weight: bold;
   margin-left: 10px;
   color: white;
-  mix-blend-mode: difference; 
+  /* mix-blend-mode: difference;  */
 }
 .container-elements{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    ;
+    /* color: white; */
 }
 .elements{
     display: flex;
@@ -51,7 +52,7 @@ body{
     background-color: transparent;
     border: none;
     color: white;
-    mix-blend-mode: difference; 
+    /* mix-blend-mode: difference;  */
     font-size: 18px;
 }
 .profile{
@@ -78,7 +79,7 @@ body{
     background-color: transparent;
     border: none;
     color: white;
-    mix-blend-mode: difference; 
+    /* mix-blend-mode: difference;  */
 }
 /* external css */
 /*#nav-bar
@@ -95,10 +96,11 @@ body{
 }
 #Who
 {
-	padding-top: 100px;
+	padding-top: 50px;
 	background-color:  transparent;
 	padding-bottom: 40px;
-  box-shadow: 0 0 10px rgb(99, 90, 90);
+  /* box-shadow: 0 0 10px rgb(99, 90, 90); */
+  margin-bottom: 20px;
 }
 
 button.btn{
@@ -119,7 +121,7 @@ button.btn{
 	padding-left: 5%;
 	padding-right:5%;
 	padding-bottom: 5%;
-  
+  margin-bottom: 50px;
 }
 .abcd
 {
@@ -131,7 +133,7 @@ button.btn{
 }
 #addi2
 { 
-  box-shadow: 0 0 10px rgb(99, 90, 90);
+  /* box-shadow: 0 0 10px rgb(99, 90, 90); */
 	padding-bottom: 50px;
   margin-left:10px;
   
@@ -152,6 +154,7 @@ button.btn{
 	padding-left: 30px;
 	box-shadow: 0 0 10px rgb(99, 90, 90);
 	padding-bottom: 30px;
+  margin-bottom: 50px;
 }
 .abcd3
 {
@@ -164,7 +167,7 @@ button.btn{
 {
 	padding-top: 30px;
 	margin-left:20px;
-	
+	margin-bottom: 60px;
 	padding-bottom: 30px
 
 }
@@ -183,7 +186,7 @@ button.btn{
 {
 	padding-top: 30px;
 	padding-left: 30px;
-	
+	margin-bottom: 60px;
 	padding-bottom: 30px
 
 }
@@ -233,8 +236,8 @@ button.btn{
   background-color: transparent;
   box-shadow: 0 0 10px rgba(99, 90, 90, 0.814);
   border-radius: 10px;
-  color: white;
-  mix-blend-mode: difference; 
+  color: black;
+  /* mix-blend-mode: difference;  */
   background-color: rgba(255, 255, 255, 0.8); /* Semi-transparent white background */
   backdrop-filter: blur(10px);
 }
@@ -268,11 +271,11 @@ button.btn{
   padding: 20px;
   /* border: 1px solid #ccc; */
   border-radius: 10px;
-  /* box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2); */
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   display: flex;
   flex-direction: column;
   color: black;
-  background-color: rgba(98, 85, 85, 0.459); /* Semi-transparent white background */
+  background-color: white; /* Semi-transparent white background */
   backdrop-filter: blur(10px);
   margin-bottom: 40px;
 }
@@ -301,7 +304,7 @@ button.btn{
   justify-content: center;
   align-items: center;
   background-color: transparent;
-  color: white;
+  /* color: white; */
   border-radius: 5px;
 }
 /* ending profile section */
@@ -374,7 +377,7 @@ a {
 
 
 .footer {
-    background-color: #004658;
+    background-color: #283766;
     color: #fff;
 }
 .footer-wave-svg {
@@ -386,7 +389,7 @@ a {
     width: 100%;
 }
 .footer-wave-path {
-    fill: #fffff2;
+    fill: black;
 }
 
 .footer-content {
@@ -413,6 +416,7 @@ a {
 
 .footer-logo-link {
     display: inline-block;
+    color: white;
 }
 .footer-menu {
     margin-top: 30px;
@@ -445,13 +449,13 @@ a {
 }
 .footer-call-to-action-button:hover {
     background-color: #fffff2;
-    color: #00bef0;
+    /* color: white; */
 }
 .button:last-of-type {
     margin-right: 0;
 }
 .footer-call-to-action-button {
-    background-color: #027b9a;
+    background-color: black;
     border-radius: 21px;
     color: #fffff2;
     display: inline-block;
@@ -513,14 +517,14 @@ a {
 }
 
 .footer-social-amoeba-path {
-    fill: #027b9a;
+    fill: black;
 }
 
 .footer-social-link.linkedin {
     height: 26px;
     left: 3px;
     top: 11px;
-    width: 26px;
+    width: 40px;
 }
 
 .footer-social-link {
@@ -556,25 +560,25 @@ a {
     height: 28px;
     left: 62px;
     top: 3px;
-    width: 28px;
+    width: 40px;
 }
 
 .footer-social-link.youtube {
     height: 24px;
     left: 123px;
     top: 12px;
-    width: 24px;
+    width: 40px;
 }
 
 .footer-social-link.github {
     height: 34px;
     left: 172px;
     top: 7px;
-    width: 34px;
+    width: 50px;
 }
 
 .footer-copyright {
-    background-color: #027b9a;
+    background-color: black;
     color: #fff;
     padding: 15px 30px;
   text-align: center;
