--- a/home/style.css
+++ b/home/style.css
@@ -24,7 +24,7 @@ body{
   justify-content: space-between;
   align-items: center;
   /* border: 2px solid black; */
-  background-color: #283766; /* Semi-transparent white background */
+  background-color: #283766; 
   backdrop-filter: blur(10px);
   flex-wrap: wrap;
   color: white;
@@ -264,7 +264,7 @@ button.btn{
   font-weight: bold;
   margin-top: 20px;
 }
-.contact-us {
+.contact_us {
   width: 600px;
   margin: 0 auto;
   margin-top: 100px;
