--- a/home/style.css
+++ b/home/style.css
@@ -21,19 +21,20 @@ body{
 .navbar{
   width: 100%;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   /* border: 2px solid black; */
   background-color: #283766; 
   backdrop-filter: blur(10px);
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
   color: white;
   /* margin-bottom: 20px; */
+  padding: 0px;
 }
 .title{
   font-size: 30px;
   font-weight: bold;
-  margin-left: 10px;
+  /* margin-left: 10px; */
   color: white;
   /* mix-blend-mode: difference;  */
 }
@@ -42,10 +43,11 @@ body{
     justify-content: space-between;
     align-items: center;
     /* color: white; */
+    width: 50%;
 }
 .elements{
     display: flex;
-    padding: 10px 50px;
+    /* padding: 10px 50px; */
     text-decoration: none;
     color: black;
     font-weight: bold;
@@ -55,27 +57,26 @@ body{
     /* mix-blend-mode: difference;  */
     font-size: 18px;
 }
-.profile{
-  display: flex;
-  align-items: center;
-  
-}
-#profile-photo{
+  .profile{
+    display: flex;
+    align-items: center;
+  }
+ #profile-photo{
     display: flex;
     width: 50px;
     height: 50px;
     border-radius: 50%;
     border: 2px solid black; 
-    margin: 0px 10px;
-    flex-wrap: wrap;
+    /* margin: 0px 10px; */
+    /* flex-wrap: wrap; */
 }
-#account{
+  #account{
     display: flex;
     flex-direction: column;
     justify-content: center;
     font-weight: bold;
-    padding: 0px 10px;
-    height: 30px;
+    /* padding: 0px 10px; */
+    /* height: 30px; */
     background-color: transparent;
     border: none;
     color: white;
