--- a/home/style.css
+++ b/home/style.css
@@ -66,7 +66,7 @@ body{
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    border: 2px solid black; 
+    border: 2px solid white; 
 }
   #account{
     display: flex;
@@ -94,12 +94,28 @@ body{
 }
 #Who
 {
-	padding-top: 50px;
+	/* padding-top: 50px; */
 	background-color:  transparent;
-	padding-bottom: 40px;
+  padding: 50px;
   /* box-shadow: 0 0 10px rgb(99, 90, 90); */
   margin-bottom: 20px;
   font-family:Georgia, 'Times New Roman', Times, serif;
+  width: 100%;
+}
+.container{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  /* border: 2px solid black; */
+  /* background-color: #283766;  */
+  backdrop-filter: blur(10px);
+  /* flex-wrap: wrap; */
+  /* color: white; */
+  /* margin-bottom: 20px; */
+  box-shadow: 0 0 10px rgb(99, 90, 90);
+  padding: 30px;
+  border-radius: 10px;
+  width: 100%;
 }
 
 button.btn{
